🥩 Panel Collapse, resolves #81

--- a/components/panel/Panel.module.scss
+++ b/components/panel/Panel.module.scss
@@ -31,7 +31,8 @@
 
       margin-left: auto;
 
-      .panel__close {
+      .panel__close,
+      .panel__collapse {
         cursor: pointer;
 
         opacity: 0.5;
